1、首页fragment视图添加

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="window_background">#eaeaea</color>
     <color name="transparent_">#80888888</color>
     <color name="transparent_half">#80ededed</color>
+    <color name="text_color">#666666</color>
 </resources>
