--- a/app/src/main/res/layout/home_page_fragment_layout.xml
+++ b/app/src/main/res/layout/home_page_fragment_layout.xml
@@ -2,9 +2,14 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.shizhefei.view.indicator.ScrollIndicatorView
+        android:id="@+id/moretab_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:fillViewport="false" />
     <android.support.v4.view.ViewPager
+        android:id="@+id/view_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </android.support.v4.view.ViewPager>
 </android.support.constraint.ConstraintLayout>
